Resolve z-index issues

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,7 +42,6 @@ li {
     }
   }
 }
-
 /********************
     HEADER
 *********************/
@@ -74,39 +73,6 @@ header {
           p {
             font-size: $nav-item-size;
           }
-        }
-      }
-    }
-
-    div.hamburger {
-      display: none;
-      position: relative;
-    }
-
-    div.overlay {
-      @extend %centering-box;
-      position: fixed;
-      left: 0;
-      top: 0;
-      z-index: -1;
-      width: 100vw;
-      height: 100vh;
-      div.sphere {
-        @extend %centering-box;
-        opacity: 0;
-        position: absolute;
-        background-color: $color-light;
-        transition-property: all;
-        transition-duration: 0.5s;
-        transition-timing-function: cubic-bezier(0, 0, 0, 1);
-        width: 0;
-        height: 0;
-        border-radius: 50%;
-
-        a {
-          padding: 0.5rem;
-          color: $color-dark;
-          font-size: $txt-l;
         }
       }
     }
