--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -1,89 +1,132 @@
 @import "extends";
 
+/********************
+    OVERLAY
+********************/
+
+/********************
+    INPUT CHECKED
+********************/
+input {
+  display: none;
+  &:checked + label {
+    div.line {
+      background-color: $color-dark;
+
+      transform: translateY(7px) rotate(45deg) scale(1.1);
+      &:before {
+        top: 0px;
+        background-color: $color-dark;
+        transform: rotate(-0deg);
+      }
+      &:after {
+        top: 0px;
+        background-color: $color-dark;
+        transform: rotate(-270deg);
+      }
+    }
+  }
+
+  &:checked + label + div.overlay {
+    z-index: 100;
+    div.sphere {
+      width: 150vh;
+      height: 150vh;
+      a {
+        color: $color-dark;
+        opacity: 1;
+      }
+    }
+  }
+}
+
+/********************
+    INPUT UNCHECKED
+********************/
+label {
+  position: fixed;
+  top: 1.1rem;
+  right: 0.9rem;
+  z-index: 200;
+  margin-top: 0.5rem;
+  height: 1.25rem;
+  width: 1.25rem;
+  @extend %box;
+
+  div.line {
+    transition-property: all;
+    transition-duration: 0.125s;
+
+    transition-timing-function: ease-in-out;
+    height: 2px;
+    background-color: $color-light;
+    width: 1.25rem;
+    position: relative;
+
+    &:before {
+      transition-property: all;
+      transition-duration: 0.25s;
+      transition-timing-function: ease-in-out;
+      content: "";
+      height: 2px;
+      background-color: $color-light;
+      width: 1.25rem;
+      position: absolute;
+      top: 7px;
+    }
+
+    &:after {
+      transition-duration: 0.5s;
+      transition-property: all;
+      transition-timing-function: ease-in-out;
+      content: "";
+      height: 2px;
+      background-color: $color-light;
+      width: 1.25rem;
+      position: absolute;
+      top: 14px;
+    }
+  }
+}
+
+div.overlay {
+  position: fixed;
+  @extend %centering-box;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+  div.sphere {
+    @extend %centering-box;
+    opacity: 1;
+    position: absolute;
+    background-color: $color-light;
+    transition-property: all;
+    transition-duration: 0.25s;
+    transition-timing-function: cubic-bezier(0, 0, 0, 1);
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    a {
+      transition-property: all;
+      transition-duration: 0.125s;
+      transition-timing-function: ease-in-out;
+      opacity: 0;
+      padding: 2rem;
+      color: $color-light;
+      font-size: $heading-s;
+      font-weight: 100;
+    }
+  }
+}
+/********************
+    HEADER
+********************/
 header {
   nav {
     ul {
       display: none;
-    }
-
-    div.hamburger {
-      display: block;
-      z-index: 10;
-      width: fit-content;
-      input {
-        display: none;
-        &:checked + label {
-          div.line {
-            background-color: $color-dark;
-
-            transform: translateY(7px) rotate(45deg) scale(1.1);
-            &:before {
-              top: 0px;
-              background-color: $color-dark;
-
-              // opacity: 0;
-              transform: rotate(-0deg);
-            }
-            &:after {
-              top: 0px;
-              background-color: $color-dark;
-
-              transform: rotate(-270deg);
-            }
-          }
-
-          & + div.overlay {
-            div.sphere {
-              width: 150vh;
-              opacity: 0.9;
-              height: 150vh;
-            }
-          }
-        }
-      }
-      label {
-        margin-top: 0.5rem;
-        height: 1.25rem;
-        width: 1.25rem;
-        @extend %box;
-
-        div.line {
-          transition-property: all;
-          transition-duration: 0.125s;
-
-          transition-timing-function: ease-in-out;
-          background-color: $color-light;
-          height: 2px;
-          width: 1.25rem;
-          position: relative;
-
-          &:before {
-            transition-property: all;
-            transition-duration: 0.25s;
-
-            transition-timing-function: ease-in-out;
-            content: "";
-            background-color: $color-light;
-            height: 2px;
-            width: 1.25rem;
-            position: absolute;
-            top: 7px;
-          }
-
-          &:after {
-            transition-duration: 0.5s;
-
-            transition-property: all;
-            transition-timing-function: ease-in-out;
-            content: "";
-            background-color: $color-light;
-            height: 2px;
-            width: 1.25rem;
-            position: absolute;
-            top: 14px;
-          }
-        }
-      }
     }
   }
 }
